force-app/main/default/objects/LLC_BI__Legal_Entities__c/LLC_BI__Legal_Entities__c.object-meta.xml
<CustomObject>
    <description>The Entity Involvement object contains information about the associations between relationships and loans.</description>
    <label>Entity Involvement</label>
    <nameField>
        <label>Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entity Involvements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>