force-app/main/default/objects/LLC_BI__Legal_Entities__c/fields/ffin_Borrower_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>ffin_Borrower_Type_Code__c</fullName>
    <description>Custom field used to capture the Borrower Type code via nightly sync</description>
    <label>Borrower Type Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>