force-app/main/default/objects/LLC_BI__Legal_Entities__c/fields/Integration_Source__c.field-meta.xml
<CustomField>
    <fullName>Integration_Source__c</fullName>
    <description>Custom field to designate source Credit Union of object used by nCino Data Services.</description>
    <label>Integration Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>