force-app/main/default/objects/LLC_BI__Legal_Entities__c/fields/LLC_BI__Address__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Address__c</fullName>
    <description>Address for this Entity</description>
    <label>Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>