force-app/main/default/objects/LLC_BI__Legal_Entities__c/fields/LLC_BI__Borrower_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Borrower_Type__c</fullName>
    <description>Typical borrower types will include borrower, co-borrower, guarantor, limited guarantor.  Value provided must match one of the values in the Type pick list established for this organization.</description>
    <label>Borrower Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Borrower</fullName>
            </value>
            <value>
                <fullName>Guarantor</fullName>
            </value>
            <value>
                <fullName>Limited Guarantor</fullName>
            </value>
            <value>
                <fullName>Co-Borrower</fullName>
            </value>
            <value>
                <fullName>Related Entity</fullName>
            </value>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Guarantor Credit Group</fullName>
                <label>Guarantor HOUSEHOLD</label>
            </value>
            <value>
                <fullName>Borrower Credit Group</fullName>
                <label>Borrower HOUSEHOLD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>