force-app/main/default/objects/LLC_BI__Legal_Entities__c/fields/LLC_BI__Deposit__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Deposit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is optional. This field is populated as part of the new deposit workflow. This field specifies the deposit associated with the entity involvement. By also associating the entity involvement to a relationship, it allows a user to associate a deposit and relationship together.</description>
    <label>Deposit</label>
    <referenceTo>LLC_BI__Deposit__c</referenceTo>
    <relationshipLabel>Entity Involvements</relationshipLabel>
    <relationshipName>Legal_Entities</relationshipName>
    <type>Lookup</type>
</CustomField>