force-app/main/default/objects/LLC_BI__Legal_Entities__c/fields/LLC_BI__Doing_Business_As__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Doing_Business_As__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates this lookup field on Entity Involvements to associate Sole Proprietorship Accounts to Sole Proprietorships. The system only populates this field on Entity Involvements for Individuals that apply for loans or deposits as a Sole Proprietorship.</description>
    <inlineHelpText>Enter a Sole Proprietorship Account to associate to a Sole Proprietorship.</inlineHelpText>
    <label>Doing Business As</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Entity Involvements (Sole Proprietorship)</relationshipLabel>
    <relationshipName>Sole_Prop_Legal_Entities</relationshipName>
    <type>Lookup</type>
</CustomField>