force-app/main/default/objects/LLC_BI__Legal_Entities__c/fields/LLC_BI__Exclude_From_Product_Package_Exposure__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Exclude_From_Product_Package_Exposure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>--DEPRECATED-- The user manually selects this optional field. When true, it excludes loan exposure from the product package. When false, it does not.</description>
    <label>-D Exclude From Product Package Exposure</label>
    <type>Checkbox</type>
</CustomField>