force-app/main/default/objects/LLC_BI__Legal_Entities__c/fields/LLC_BI__HMDA_Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Ethnicity__c</fullName>
    <description>This field is optional. The user manually populates this field on the HMDA page. This field stores the ethnicty of the applicant.</description>
    <label>Ethnicity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Code 1—Hispanic or Latino</fullName>
            </value>
            <value>
                <fullName>Code 2—Not Hispanic or Latino</fullName>
            </value>
            <value>
                <fullName>Code 3—Information not provided by applicant in mail, internet, or telephone application</fullName>
            </value>
            <value>
                <fullName>Code 4—Not applicable</fullName>
            </value>
            <value>
                <fullName>Code 5—No co-applicant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>