force-app/main/default/objects/LLC_BI__Legal_Entities__c/fields/LLC_BI__HMDA_Income__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Income__c</fullName>
    <description>This field is optional. The user manually populates this field on the HMDA page. This field stores the income of the applicant.</description>
    <label>Income of Applicant (In Thousands)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>