force-app/main/default/objects/LLC_BI__Legal_Entities__c/fields/LLC_BI__Is_Grantor__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Grantor__c</fullName>
    <description>This field is optional. It automatically populates based on the selection in the LLC_BI__Borrower_Type__c field. It indicates if the record denotes a grantor</description>
    <formula>IF((ISPICKVAL(LLC_BI__Borrower_Type__c, &apos;Grantor&apos;)) , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Grantor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>