force-app/main/default/objects/LLC_BI__Legal_Entities__c/fields/LLC_BI__Loan_Collateral__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan_Collateral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is optional. It can be manually populated from a Collateral record. This field specifies the collateral associated with the entity involvement. It is not typically used.</description>
    <inlineHelpText>The collateral that the legal entity is associated with.</inlineHelpText>
    <label>Loan Collateral</label>
    <referenceTo>LLC_BI__Loan_Collateral__c</referenceTo>
    <relationshipName>Legal_Entities</relationshipName>
    <type>Lookup</type>
</CustomField>