force-app/main/default/objects/LLC_BI__Legal_Entities__c/fields/LLC_BI__Order__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Order__c</fullName>
    <description>The users populate this optional field with the index number of a legal entity to track and display the order of the borrowing structure. By default, it is 0.</description>
    <inlineHelpText>This field contains the entity&apos;s index number, which indicates the order of the entity in the borrowing structure.</inlineHelpText>
    <label>Borrower Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>