force-app/main/default/objects/LLC_BI__Legal_Entities__c/fields/LLC_BI__Product_Package__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is optional. It automatically populates when creating entity involvement from the product package. This field specifies the product package associated with the entity involvement. By also associating the entity involvement to a relationship, it allows a user to associate a product package and relationship together.</description>
    <label>Product Package</label>
    <referenceTo>LLC_BI__Product_Package__c</referenceTo>
    <relationshipLabel>Entity Involvements</relationshipLabel>
    <relationshipName>Entity_Involvements</relationshipName>
    <type>Lookup</type>
</CustomField>