force-app/main/default/objects/LLC_BI__Legal_Entities__c/fields/LLC_BI__Route_Agreement__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Route_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates this optional lookup field with the route agreement id associated with the legal entity.</description>
    <label>Route Agreement</label>
    <referenceTo>nFORCE__Route_Agreement__c</referenceTo>
    <relationshipLabel>Entity Involvements</relationshipLabel>
    <relationshipName>Legal_Entities</relationshipName>
    <type>Lookup</type>
</CustomField>