force-app/main/default/objects/LLC_BI__Legal_Entities__c/fields/LLC_BI__Treasury_Service__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Treasury_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is optional. It automatically populates when a user creates an entity involvement from a treasury service. It is also populated when a user creates a new treasury service from a relationship. This field specifies the treasury service associated with the entity involvement. By also associating the entity involvement to a relationship, it allows a user to associate a treasury service and relationship together.</description>
    <label>Treasury Service</label>
    <referenceTo>LLC_BI__Treasury_Service__c</referenceTo>
    <relationshipLabel>Entity Involvements</relationshipLabel>
    <relationshipName>Entity_Involvements</relationshipName>
    <type>Lookup</type>
</CustomField>