force-app/main/default/objects/LLC_BI__Legal_Entities__c/validationRules/LLC_BI__Contingent_Amount_and_Contingent_Percent.validationRule-meta.xml
<ValidationRule>
    <fullName>LLC_BI__Contingent_Amount_and_Contingent_Percent</fullName>
    <active>true</active>
    <description>Only one field can be used to calculate contingent guarantee. Please specify either amount or percentage before saving.</description>
    <errorConditionFormula>( LLC_BI__Contingent_Amount__c &gt; 0 &amp;&amp;  LLC_BI__Ownership__c &gt; 0) &amp;&amp;
(!CONTAINS(TEXT(LLC_BI__Borrower_Type__c) , &apos;Household&apos;))</errorConditionFormula>
    <errorMessage>Only one field can be used to calculate contingent guarantee. Please specify either amount or percentage before saving.</errorMessage>
</ValidationRule>