force-app/main/default/objects/LLC_BI__Legal_Entities__c/validationRules/LLC_BI__Contingent_Amount_Exceeds_Loan_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>LLC_BI__Contingent_Amount_Exceeds_Loan_Amount</fullName>
    <active>true</active>
    <description>Ensures the contingent amount does not exceed the loan amount.</description>
    <errorConditionFormula>LLC_BI__Contingent_Amount__c &gt; LLC_BI__Loan__r.LLC_BI__Amount__c</errorConditionFormula>
    <errorDisplayField>LLC_BI__Contingent_Amount__c</errorDisplayField>
    <errorMessage>Contingent amount cannot exceed the loan amount.</errorMessage>
</ValidationRule>