force-app/main/default/objects/LLC_BI__Legal_Entities__c/validationRules/LLC_BI__Contingent_Amount_Less_Than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>LLC_BI__Contingent_Amount_Less_Than_0</fullName>
    <active>true</active>
    <description>Contingent Amount a negative value.</description>
    <errorConditionFormula>LLC_BI__Contingent_Amount__c &lt; 0</errorConditionFormula>
    <errorMessage>Contingent Amount must be greater than 0.</errorMessage>
</ValidationRule>