force-app/main/default/objects/LLC_BI__Legal_Entities__c/validationRules/LLC_BI__HMDA_Demographic.validationRule-meta.xml
<ValidationRule>
    <fullName>LLC_BI__HMDA_Demographic</fullName>
    <active>false</active>
    <description>--DEPRECATED--</description>
    <errorConditionFormula>FALSE</errorConditionFormula>
    <errorMessage>--DEPRECATED--</errorMessage>
</ValidationRule>