force-app/main/default/objects/LLC_BI__Legal_Entities__c/validationRules/LLC_BI__Ownership_Less_Than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>LLC_BI__Ownership_Less_Than_0</fullName>
    <active>true</active>
    <description>Contingent Percentage must be greater than 0.</description>
    <errorConditionFormula>LLC_BI__Ownership__c &lt; 0</errorConditionFormula>
    <errorMessage>Contingent Percentage must be greater than 0.</errorMessage>
</ValidationRule>